--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -22,25 +22,23 @@ $$
 则对于 $\displaystyle \Omega$ ，有
 
 $$
-\delta\Omega=\left(\frac{\partial\Omega}{\partial\mathrm{E}}\right)_{\xi\lambda}\mathrm{dE}+\sum_{\lambda}\left(\frac{\partial\Omega}{\partial\xi_{\lambda}}\right)_{\xi}\delta\xi_{\lambda}=e^{\Phi}(\delta\mathrm{E}+\sum X_{\lambda}\delta\xi_{\lambda})
+\delta\Omega=\left(\frac{\partial\Omega}{\partial\mathrm{E}}\right)_{\xi\lambda}\mathrm{dE}+\sum_{\lambda}\left(\frac{\partial\Omega}{\partial\xi_{\lambda}}\right)_{E}\delta\xi_{\lambda}=e^{\Phi}(\delta\mathrm{E}+\sum X_{\lambda}\delta\xi_{\lambda})
 $$
 
-$$
-\begin{gathered}
-\delta\Omega  =(\frac{\partial\Omega}{\partial E})_{\xi}\delta E+\sum_{\lambda}(\frac{\partial\Omega}{\partial\xi_{\lambda}})_{E}\delta\xi_{\lambda} 
-=e^{\phi}(\delta E+\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda})
-\end{gathered}
-$$
 $$
 \delta\ln\Omega=\frac{\delta\Omega}{\Omega}=\frac{\delta E+\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}}{e^{-\phi}\Omega}
 $$
 
 ### 热力学第一定律
 
-对比热一 $\displaystyle T\delta S=\delta Q=\delta E+\delta A$，定义广义力所做的元功 $\displaystyle \delta A=\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}$，对比可得
+对比热力学第一定律 $\displaystyle T\delta S=\delta Q=\delta E+\delta A$，定义广义力所做的元功 $\displaystyle \delta A=\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}$，对比可得
+$$
+\delta\Omega=e^{\Phi}\left( \delta\mathrm{E}+\sum X_{\lambda}\delta\xi_{\lambda} \right) =e^{\Phi}\left(  \delta\mathrm{E}+\delta\mathrm{A}\right) 
+$$
+令 $\displaystyle e^{-\phi}\Omega=kT$ ，$\displaystyle \delta S=\frac{\delta E+\delta A}{T}=\frac{\delta \Omega e^{-\Phi}}{T}=\frac{k\delta\Omega}{\Omega}$
 
 $$
-\begin{aligned}e^{-\phi}\Omega=kT\\S=k\ln\Omega+C\end{aligned}
+S=k\ln\Omega+C
 $$
 
 其中 $k$ 为玻尔兹曼常数， $S$ 为玻尔兹曼熵， $C$ 为任意积分常量。
@@ -61,15 +59,19 @@ $$
 \delta\phi=\delta\langle E\rangle+\langle\ln\rho\rangle\delta\theta+\theta\delta\langle\ln\rho\rangle
 $$
 
-由归一化条件，得 $\displaystyle e^{-\frac{\phi}{\theta}}=\int e^{-\frac{E}{\theta}}d\Omega$，等式两边求全变分
+由归一化条件以及 $\displaystyle \theta, \phi$ 均为常量，得 $\displaystyle e^{-\frac{\phi}{\theta}}=\int e^{-\frac{E}{\theta}}d\Omega$，等式两边求全变分（注意 $\displaystyle E(\xi_{\lambda})$）
 $$
-e^{-\frac{\phi}{\theta}}(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\theta^{2}})=\frac{\delta\theta}{\theta^{2}}\int Ee^{-\frac{E}{\theta}}d\Omega-\frac{1}{\theta}\sum_{\lambda}\delta\xi_{\lambda}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\frac{E}{\theta}}d\Omega 
+\begin{align}
+e^{-\frac{\phi}{\theta}}(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\theta^{2}})&=\frac{\delta\theta}{\theta^{2}}\int Ee^{-\frac{E}{\theta}}d\Omega-\frac{1}{\theta}\sum_{\lambda}\delta\xi_{\lambda}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\frac{E}{\theta}}d\Omega \\ 
+&=\frac{\delta\theta}{\theta^{2}}\left< E \right> -\frac{1}{\theta}\sum\left< \frac{\partial E}{\partial\xi_{\lambda}} \right> \delta\xi_{\lambda}
+\end{align}
+
 $$
-整理可得
+ $\displaystyle \rho=e^{\frac{\phi-E}{\theta}}$，即 $\displaystyle \ln\rho=\frac{\phi-E}{\theta}$，代入整理可得 #疑问 
 $$
 \delta\phi=\frac{\phi-\langle E\rangle}{\theta}\delta\theta+\sum_{\lambda}\langle\frac{\partial E}{\partial\xi_{\lambda}}\rangle\delta\xi_{\lambda}=<ln\rho>\delta\theta+\sum<\frac{\partial E}{\partial\xi_{\lambda}}>\delta\xi_{\lambda}
 $$
-定义广义力做功的平均值为 $\displaystyle \langle A\rangle=\langle X_{\lambda}\rangle=\langle-\frac{\partial E}{\partial\xi_{\lambda}}\rangle$，联立为
+定义广义力做功的平均值为 $\displaystyle \langle A\rangle=\sum\langle X_{\lambda}\rangle=\sum\left\langle -\frac{\partial E}{\partial\xi_{\lambda}} \right\rangle$，联立为
 $$
 -\theta\delta\langle\ln\rho\rangle=\delta\langle E\rangle+\delta\langle A\rangle 
 $$
@@ -83,7 +85,7 @@ $$
 $$
 可与亥姆霍兹自由能的形式 $\displaystyle \delta F=-S\delta T-\delta A\Rightarrow\phi=F+C$
 $$
-\phi=-k_{B}Tlne^{\frac{E}{k_{B}T}}
+\phi=-k_{B}T \ln e^{\frac{E}{k_{B}T}}
 $$
 [[系综理论#正则分布]]
 ## 配分函数
@@ -99,7 +101,7 @@ $$
 $$
 \frac{1}{Z}\int\frac{d\Omega}{(\triangle q\triangle p)^{3N}}e^{-\beta E}=1
 $$
-量子力学告诉我们粒子具有全同性，微观状态数乘以 $\displaystyle \frac{1}{N!}$，并且相空间的最小体积元为 $\displaystyle \triangle q\triangle p=h$ 则
+量子力学中粒子具有全同性，微观状态数乘以 $\displaystyle \frac{1}{N!}$，并且相空间的最小体积元为 $\displaystyle \triangle q\triangle p=h$ 则
 $$
 Z=\int\frac{d\Omega}{N!h^{3N}}e^{-\beta E}
 $$
