--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/统计物理的概率描述.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/统计物理的概率描述.md
@@ -131,7 +131,7 @@ $$
 
 ### 主方程，平衡与细致平衡条件
 #### 主方程
-假设系统 $t$ 时刻的分布函数为 $ρ(x, t)$， $x$ 与 $x'$ 的跃迁概率为 $w(x, x')$，一维醉汉模型主方程为：
+假设系统 $t$ 时刻的分布函数为 $ρ(x, t)$， $x$ 到 $x'$ 的跃迁概率为 $w(x, x')$，一维醉汉模型主方程为：
 $$
 \frac{d\rho(x,t)}{dt}=-\sum_{x'}w(x,x')\rho(x,t)+\sum_{x'}w(x',x)\rho(x',t)
 $$
