--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
@@ -1,4 +1,4 @@
-87u在具体应用过程之中，一般不严格区分经典和量子情形 #疑问 
+在具体应用过程之中，一般不严格区分经典和量子情形 #疑问 
 ## 单原子理想气体
 [[麦克斯韦——玻尔兹曼统计]] 给出
 $$
@@ -19,6 +19,14 @@ $$
 可得连续化配分函数：
 $$
 Z=\int e^{ -\beta\epsilon }\frac{dxdydzdp_{x}dp_{y}dp_{z}}{h^3}
+$$
+单原子理想气体能量：
+$$
+\epsilon=\frac{{p_{x}^2+p_{y}^2+p_{z}^2}}{2m}
+$$
+积分可得：
+$$
+Z=V{\left(\frac{2\pi m}{h^2\beta}\right)}^{3/2}
 $$
 
 ### 热力学量的导出
@@ -56,7 +64,7 @@ $$
 $$
 S=Nk_{B}
 $$
-## 
+#### 配分函数
 $$
 \epsilon=\frac{p_{x}^2}{2m}+\frac{p_{y}^2}{2m}+\frac{p_{z}^2}{2m}
 $$
@@ -67,7 +75,7 @@ $$
 \left< \frac{p_{x}^2}{2m} \right> =\frac{1}{2}k_{B}T
 $$
 $$
-U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }=-\frac{3N}{2}k_{B}T 
+U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }=\frac{3N}{2}k_{B}T 
 $$
 
 等压热容
@@ -85,6 +93,18 @@ H=\frac{1}{2m}\left( p_{x}^2+p_{y}^2+p_{z}^2 \right) +\frac{1}{2I} \left( p_{\th
 $$
 其中等效质量 $\displaystyle m_{\mu}=\frac{m_{1}m_{2}}{m_{1}+m_{2}}$ ，转动惯量 $\displaystyle I=m_{\mu}r^2$ 
 ### 玻尔兹曼分布
+异核的双原子分子，两原子的相对运动考虑为简谐振动，配分函数为：
+$$
+\left.\left\{\begin{aligned}Z^{平}&=\int\mathrm{e}^{-\frac{\beta}{2m}(p_x^2+p_y^2+p_z^2)}\frac{\mathrm{d}x\mathrm{d}y\mathrm{d}z\mathrm{d}p_x\mathrm{d}p_y\mathrm{d}p_z}{h_0^3}\\\\Z^{振}&=\int\mathrm{e}^{-\frac{\beta}{2m}(p_r^2+m_\mu^2\omega^2r^2)}\frac{\mathrm{d}p_r\mathrm{d}r}{h_0}\\\\Z^{转}&=\int\mathrm{e}^{-\frac{\beta}{2I}\left(p_\theta^2+\frac{1}{\sin^2\theta}p_{\varphi}^2\right)}\frac{\mathrm{d}p_\theta\mathrm{d}p_\varphi\mathrm{d}\theta\mathrm{d}\varphi}{h_0^2}\end{aligned}\right.\right.
+$$
+积分得
+$$
+Z^{振}=\left(\frac{2\pi m_{\mu}}{h_{0}\beta}\right)^{1/2}\left(\frac{2\pi m_{\mu}}{h_{0}\beta m_{\mu}^{2}\omega^{2}}\right)^{1/2}=\frac{2\pi}{h_{0}\beta\omega}
+$$
+$$
+\begin{aligned}Z^{转}&=\frac{1}{h_0^2}\int_0^{2\pi}\mathrm{d}\varphi\int_{0}^{\pi}\mathrm{d}\theta\int_{-\infty}^{+\infty}\mathrm{e}^{-\frac{\beta}{2I}p_{\theta}^2}\mathrm{d}p_{\theta}\cdot\int_{-\infty}^{+\infty}\mathrm{e}^{-\frac{\beta}{2I\sin^2\theta}p_{\varphi}^2}\mathrm{d}p_{\varphi}\\&=\frac{1}{h_0^2}\int_0^{2\pi}\mathrm{d}\varphi\int_0^{\pi}\mathrm{d}\theta\!\left(\frac{2\pi I}{\beta}\right)^{1/2}\left(\frac{2\pi I\sin^2\theta}{\beta}\right)^{1/2}\\&=\frac{1}{h_0^2}\frac{2\pi I}{\beta}\int_0^{2\pi}\mathrm{d}\varphi\int_0^{\pi}\sin\theta\mathrm{d}\theta\\&=\frac{8\pi^2I}{h_0^2\beta}\end{aligned}
+$$
+
 $$
 Z_{平}=V\left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}}\sim \beta^{-\frac{3}{2}}
 $$
@@ -104,19 +124,36 @@ $$
 [[能均分定理]]每个自由度上为 $\displaystyle \frac{1}{2}k_{B}T$
 
 ### 热容
+双原子气体的定容热容和定压热容
 $$
 C_{V}=\frac{7}{2}k_{B}\quad C_{p}=\frac{9}{2}k_{B}
 $$
 由热力学公式 $\displaystyle C_{p}-C_{V}=k_{B}$，得 $\displaystyle \frac{C_{p}}{C_{V}}=1.28$ ，实验结果符合较差。若振动没有被激发 $\displaystyle \frac{C_{p}}{C_{V}}=1.4$，实验结果比较符合。
 
 ### 量子描述
+根据经典统计的能量均分定理讨论了理想气体的内能和热容，所得结果与实验结果大体相符，但是：
+1. 原子内的电子对气体的热容为什么没有贡献；
+2. 双原子分子的振动在常温范围为什么对热容没有贡献；
+3. 低温下氢气的热容所得结果与实验不符
+
 谐振子能量分立化 
 $$\displaystyle \epsilon_{n}=\left( n+\frac{1}{2} \right)\hbar \omega\quad n=0,1,2\cdots$$
 转子简并度 $\displaystyle g_{i}=2l+1$，异核状态：
 $$
 \epsilon_{l}=\frac{l(l+1)\hbar^2}{2I}\quad l=0,1,2\cdots
 $$
-$\displaystyle Z=Z^{平}Z^{转}Z^{振}$ 平动部分不需量子化 #疑问 
+总的配分函数 $\displaystyle Z=Z^{平}Z^{转}Z^{振}$ 平动部分不需量子化 #疑问 
+#### 平动
+[[#配分函数]]
+$$
+Z=\int \frac{dxdydzdp_{x}dp_{y}dp_{z}}{h^3}e^{ -\beta \left( \frac{p_{x}^2}{2m}+\frac{p_{y}^2}{2m}+\frac{p_{z}^2}{2m}  \right)}=V \left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}}
+$$
+$$
+U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }=\frac{3N}{2}k_{B}T 
+$$
+$$
+C^{平}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=\frac{3Nk_{B}}{2}
+$$
 #### 振动
   
 $$
@@ -134,7 +171,7 @@ C^{振}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=Nk_{B}\left( \frac
 $$
 零点振动能不参与其中，定义振动特征温度 $\displaystyle \theta_{v}$
 $$
-k\theta_{v}=\hbar r\omega 
+k\theta_{v}=\hbar \omega 
 $$
 $$
 C^{振}=Nk_{B}\left ( \frac{\theta_{v}}{T} \right)^2 \frac{e^{ \frac{\theta_{v}}{T}}}{(-1+e^{\frac{\theta_{v}}{T}})^2}
@@ -147,14 +184,21 @@ $$
 $$
 	C_{v}\sim Nk_{B}\left( \frac{\theta_{v}}{T}\right)^2 e^{ -\frac{\theta_{v}}{T}}
 $$
+常温几乎全部振子都冻结在基态.当气体温度升高时，它们也几乎不吸收能量。这就是在常温下振动自由度不参与能量均分的原因。
 #### 转动
+转动能级
+$$
+\varepsilon=\frac{l\left(l+1\right)\hbar^{2}}{2I},\quad l=0,1,2,\cdots 
+$$
 $$
 Z_{转}=\sum_{l=0}^{\infty}\left( 2l+1 \right) e^{\frac{ -\beta (l+1)\hbar^2 }{2l}}\sim\sum_{l=0}^{\infty}\left( 2l+1 \right) e^{\frac{ -l (l+1)\theta_{r} }{T}}
 $$
-其中 $\displaystyle \theta_{r}=\frac{\hbar^2}{2kI}$，在 $\displaystyle \frac{\theta_{r}}{T}\ll 1$ 情况下，以积分代替求和进行连续化：
+其中 $\displaystyle \theta_{r}=\frac{\hbar^2}{2kI}$，在 $\displaystyle \frac{\theta_{r}}{T}\ll 1$ 情况下，$\displaystyle \frac{\theta rr}{T}l(l+1)$ 准连续变化，以积分代替求和进行连续化：
+
 $\displaystyle x=\frac{l(l+1)\theta_{r}}{T} \implies dx=\frac{(2l+1)\theta_{r}}{T}dl$
+#疑问 
 $$
-Z_{转}=\frac{T}{\theta}\int_{0}^{\infty}  e^{ -x } dx =\frac{T}{\theta_{r}}=\frac{2kIT}{\hbar^2}=\frac{2I}{\beta \hbar^2}
+Z_{转}=\frac{T}{\theta_{r}}\int_{0}^{\infty}  e^{ -x } dx =\frac{T}{\theta_{r}}=\frac{2kIT}{\hbar^2}=\frac{2I}{\beta \hbar^2}
 $$
 $$
 U_{转}=-N\frac{ \partial \ln Z }{ \partial \beta }=Nk_{B}T 
