--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -63,11 +63,10 @@ $$
 $$
 \begin{align}
 e^{-\frac{\phi}{\theta}}(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\theta^{2}})&=\frac{\delta\theta}{\theta^{2}}\int Ee^{-\frac{E}{\theta}}d\Omega-\frac{1}{\theta}\sum_{\lambda}\delta\xi_{\lambda}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\frac{E}{\theta}}d\Omega \\ 
-&=\frac{\delta\theta}{\theta^{2}}\left< E \right> -\frac{1}{\theta}\sum\left< \frac{\partial E}{\partial\xi_{\lambda}} \right> \delta\xi_{\lambda}
+(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\theta^{2}})&=\frac{\delta\theta}{\theta^{2}}\left< E \right> -\frac{1}{\theta}\sum\left< \frac{\partial E}{\partial\xi_{\lambda}} \right> \delta\xi_{\lambda}
 \end{align}
-
 $$
- $\displaystyle \rho=e^{\frac{\phi-E}{\theta}}$，即 $\displaystyle \ln\rho=\frac{\phi-E}{\theta}$，代入整理可得 #疑问 
+ $\displaystyle \rho=e^{\frac{\phi-E}{\theta}}$，即 $\displaystyle \ln\rho=\frac{\phi-E}{\theta}$，代入整理可得 
 $$
 \delta\phi=\frac{\phi-\langle E\rangle}{\theta}\delta\theta+\sum_{\lambda}\langle\frac{\partial E}{\partial\xi_{\lambda}}\rangle\delta\xi_{\lambda}=<ln\rho>\delta\theta+\sum<\frac{\partial E}{\partial\xi_{\lambda}}>\delta\xi_{\lambda}
 $$
@@ -101,7 +100,7 @@ $$
 $$
 \frac{1}{Z}\int\frac{d\Omega}{(\triangle q\triangle p)^{3N}}e^{-\beta E}=1
 $$
-量子力学中粒子具有全同性，微观状态数乘以 $\displaystyle \frac{1}{N!}$，并且相空间的最小体积元为 $\displaystyle \triangle q\triangle p=h$ 则
+量子力学中粒子具有全同性，微观状态数 $\displaystyle d\Omega$ 乘以 $\displaystyle \frac{1}{N!}$，并且相空间的最小体积元为 $\displaystyle \triangle q\triangle p=h$ 则
 $$
 Z=\int\frac{d\Omega}{N!h^{3N}}e^{-\beta E}
 $$
@@ -140,7 +139,7 @@ $$
 \begin{aligned}
 \text{dS}& =k\beta\Big(-d\frac{\partial\ln Z}{\partial\beta}+\sum_{\lambda}\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_{\lambda}}d\xi_{\lambda}\Big)  \\
 &=k\Big[-d(\beta\frac{\partial\ln Z}{\partial\beta})+\frac{\partial\ln Z}{\partial\beta}d\beta+\sum_{\lambda}\frac{\partial\ln Z}{\partial\xi_{\lambda}}d\xi_{\lambda}\Big] \\
-&=kd\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)
+&=k\mathrm{d}\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)
 \end{aligned}
 $$
 $$
@@ -163,7 +162,8 @@ $$
 &=\frac{1}{N!}\int\frac{1}{h^{3N}}e^{-\beta\sum_{i=1}^{N}\frac{p_{i}^{2}}{2m}}dqdp
 \end{aligned}
 $$
-对 $dq$ 积分给出 $V^N$，对 $dp_{i}$ 积分给出 $\int_{-\infty}^{\infty}e^{-\beta\frac{p_{i}^{2}}{2m}}dp_{i}=\sqrt{\frac{2\pi m}{\beta}},$
+对 $dq$ 积分给出 $V^N$，对 $dp_{i}$ 积分给出 $$\int_{-\infty}^{\infty}e^{-\beta\frac{p_{i}^{2}}{2m}}dp_{i}=\sqrt{\frac{2\pi m}{\beta}}$$
+
 $$
 Z=\frac{1}{N!}\Big(\frac{V}{h^{3}}\Big)^{N}\Big(\frac{2\pi m}{\beta}\Big)^{3N/2}
 $$
@@ -192,10 +192,14 @@ $$
 $$
 \left< \left( A_{i}-\left< A_{i} \right>  \right)^2  \right> =\left< A_{i}^2 \right> -\left< A_{i} \right> ^2
 $$
-在[[系综理论#正则分布]]下
+在[[系综理论#正则分布]]下，$\displaystyle \left< E \right> =frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}$
 $$
-\frac{\overline{\partial E}}{\partial\beta}=\frac{\partial}{\partial\beta}\frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}=-\frac{\sum_sE_s^2\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}+\frac{\left(\sum_sE_s\operatorname{e}^{-\beta E_s}\right)^2}{\left(\sum_s\operatorname{e}^{-\beta E_s}\right)^2}=-\left[\overline{E^2}-(\overline{E})^2\right]
+\begin{align}
+\frac{\overline{\partial E}}{\partial\beta} &=\frac{\partial}{\partial\beta}\frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}} \\&=
+-\frac{\sum_sE_s^2\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}+\frac{\left(\sum_sE_s\operatorname{e}^{-\beta E_s}\right)^2}{\left(\sum_s\operatorname{e}^{-\beta E_s}\right)^2} \\
+&=-\left[\overline{E^2}-(\overline{E})^2\right]
+\end{align}
 $$
 $$
-\overline{(E-\overline{E})^2}=-\frac{\partial\overline{E}}{\partial\beta}=kT^2\frac{\partial\overline{E}}{\partial T}=kT^2C_{V}
+\overline{(E-\overline{E})^2}=-\frac{\partial\overline{E}}{\partial\beta}=-\frac{ \partial T }{ \partial \beta } \frac{\partial\overline{E}}{\partial T}=kT^2\frac{\partial\overline{E}}{\partial T}=kT^2C_{V}
 $$
