--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/固体热容——声子气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/固体热容——声子气体.md
@@ -38,7 +38,7 @@ $$
 ### 经典模型
 周期性边界条件一维振子链
 $$
-H=\sum_{i=0}^{N}\frac{p_{i}}{2m}+\frac{k}{2}(x_{i+1}-x_{i})^2
+H=\sum_{i=0}^{N}\frac{p_{i}^2}{2m}+\frac{K}{2}(x_{i+1}-x_{i})^2
 $$
 $$
 \begin{array}{h}
