--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -10,7 +10,7 @@ $$
 (\frac{\partial\Omega}{\partial\xi_{\lambda}})_{E}=-(\frac{\partial\Omega}{\partial E})_{\xi}(\frac{\partial E}{\partial\xi})_{\Omega}=e^{\phi}X_{\lambda}
 $$
 
-对 $\displaystyle \Omega$ 求全变分，对于 $\displaystyle \xi=\xi(x,y)$ 有
+对 $\displaystyle \Omega$ 求全变分，对于 $\displaystyle \xi=\xi(x,y)$ 有 $\displaystyle \Omega=\Omega(E,\xi_{\lambda})$
 
 $$
 d\xi=\left(\frac{\partial\xi}{\partial x}\right)_{y}dx+\left(\frac{\partial\xi}{\partial y}\right)_{x}dy 
@@ -19,7 +19,7 @@ $$
 d\xi=0\Rightarrow\left(\frac{\partial x}{\partial y}\right)_{\xi}=\frac{-\left(\frac{\partial\xi}{\partial y}\right)_{x}}{\left(\frac{\partial\xi}{\partial x}\right)_{y}}
 $$
 
-则对于 $\displaystyle \Omega$ ，有
+则对于 $\displaystyle \Omega$ ，有变分
 
 $$
 \delta\Omega=\left(\frac{\partial\Omega}{\partial\mathrm{E}}\right)_{\xi\lambda}\mathrm{dE}+\sum_{\lambda}\left(\frac{\partial\Omega}{\partial\xi_{\lambda}}\right)_{E}\delta\xi_{\lambda}=e^{\Phi}(\delta\mathrm{E}+\sum X_{\lambda}\delta\xi_{\lambda})
@@ -68,9 +68,9 @@ e^{-\frac{\phi}{\theta}}(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\the
 $$
  $\displaystyle \rho=e^{\frac{\phi-E}{\theta}}$，即 $\displaystyle \ln\rho=\frac{\phi-E}{\theta}$，代入整理可得 
 $$
-\delta\phi=\frac{\phi-\langle E\rangle}{\theta}\delta\theta+\sum_{\lambda}\langle\frac{\partial E}{\partial\xi_{\lambda}}\rangle\delta\xi_{\lambda}=<ln\rho>\delta\theta+\sum<\frac{\partial E}{\partial\xi_{\lambda}}>\delta\xi_{\lambda}
+\delta\phi=\frac{\phi-\langle E\rangle}{\theta}\delta\theta+\sum_{\lambda}\langle\frac{\partial E}{\partial\xi_{\lambda}}\rangle\delta\xi_{\lambda}=<ln\rho>\delta\theta-\sum<\frac{\partial E}{\partial\xi_{\lambda}}>\delta\xi_{\lambda}
 $$
-定义广义力做功的平均值为 $\displaystyle \langle A\rangle=\sum\langle X_{\lambda}\rangle=\sum\left\langle -\frac{\partial E}{\partial\xi_{\lambda}} \right\rangle$，联立为
+定义广义力做功的平均值为 $\displaystyle \langle A\rangle=\sum\langle X_{\lambda}\rangle=\sum\left\langle \frac{\partial E}{\partial\xi_{\lambda}} \right\rangle$，联立为
 $$
 -\theta\delta\langle\ln\rho\rangle=\delta\langle E\rangle+\delta\langle A\rangle 
 $$
