--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -84,8 +84,10 @@ $$
 $$
 可与亥姆霍兹自由能的形式 $\displaystyle \delta F=-S\delta T-\delta A\Rightarrow\phi=F+C$
 $$
-\phi=-k_{B}T \ln e^{\frac{E}{k_{B}T}}
+\phi=-k_{B}T \ln \int e^{\frac{E}{k_{B}T}}d\Omega
 $$
+
+
 [[系综理论#正则分布]]
 ## 配分函数
 正则系综的分布函数可以写为
@@ -192,7 +194,7 @@ $$
 $$
 \left< \left( A_{i}-\left< A_{i} \right>  \right)^2  \right> =\left< A_{i}^2 \right> -\left< A_{i} \right> ^2
 $$
-在[[系综理论#正则分布]]下，$\displaystyle \left< E \right> =frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}$
+在[[系综理论#正则分布]]下，$\displaystyle \left< E \right> =\frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}$
 $$
 \begin{align}
 \frac{\overline{\partial E}}{\partial\beta} &=\frac{\partial}{\partial\beta}\frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}} \\&=
