--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
@@ -44,7 +44,7 @@ $\displaystyle n$ 个粒子进入 $\displaystyle \omega _{i}$ 的概率为 $\dis
 \end{align} $$
  利用[[ stirling 公式]] $\displaystyle \ln N! = N \ln N-N$ ，由拉格朗日乘子法得 #疑问 
  $$
-\displaystyle \delta \ln \omega-\alpha \delta N-\beta \delta E= \sum \left(\ln \frac{g_{i}}{n_{i}} \delta n _{i}+\alpha+\beta\epsilon _{i}\right)=0
+\displaystyle \delta \ln \omega-\alpha \delta N-\beta \delta E= \sum \left(\ln \frac{g_{i}}{n_{i}} +\alpha-\beta\epsilon _{i}\right)\delta n _{i}=0
 $$
  $$
 \displaystyle  \sum \left(\ln \frac{g_{i}}{n_{i}}+\alpha-\beta \epsilon_{i}\right)=0
