--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由动力学到统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由动力学到统计物理.md
@@ -29,7 +29,7 @@ $$
 ### 遍历性假设
 遍历性假说又叫做**各态遍历假说**，是历史上玻尔兹曼为了把统计物理完全建立在动力学基础上而提出的，它可以表述为：*对于孤立的保守体系，只要经过足够长的时间，从任一初态出发，都将经过能量曲面上的一切微观状态，即相空间上的任何一点都可以被一条相轨道所遍历*。此时对一物理量做长时间平均即相当对稳定态密度的系综做平均。然而遍历性假说在数学上已经被证明不成立，因为对于高维相空间，零测度的相轨道不可能跑遍整个高维相空间。
 ### 混合性假设
-混合性假设又称**准各态遍历假说**，是由玻尔兹曼的学生埃伦费斯特提出的一个放松一些要求的前腿假设，它可以表述为：_一个力学系统在足够长的时间运动中，相轨道可以无限接近于能量曲面上的任何点_。然而，混合性假设也被证明是不成立的。
+混合性假设又称**准各态遍历假说**，是由玻尔兹曼的学生埃伦费斯特提出的一个放松一些要求的前提假设，它可以表述为：_一个力学系统在足够长的时间运动中，相轨道可以无限接近于能量曲面上的任何点_。然而，混合性假设也被证明是不成立的。
 ### 等概率原理
 等概率原理即一个孤立系统，设有 $\displaystyle d\Omega_{1}$ 和 $\displaystyle d\Omega_{2}$  两个相体积，如果它们相等，则相轨迹通过它们的概率相等。在前面的系综理论中，我们曾通过微正则系综推出了[[系综理论#等概率原理]]，因此**等概率原理与微正则系综等价**，都是统计物理中非常重要的一条假设。
 
