--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -123,7 +123,7 @@ $$
 $$
 ### 压强
 $$
-\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_{\lambda}}=\frac{1}{\beta}\frac{\partial\ln Z}{\partial Z}\frac{\partial Z}{\partial\xi_{\lambda}}=\frac{1}{Z}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\beta E}d\Omega 
+\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_{\lambda}}=\frac{1}{\beta}\frac{\partial\ln Z}{\partial Z}\frac{\partial Z}{\partial\xi_{\lambda}}=-\frac{1}{Z}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\beta E}d\Omega 
 $$
 广义力的平均值的形式 $\displaystyle \langle X_\lambda\rangle=\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_\lambda}$，考虑到 
 $\xi_{\lambda}$ 为体积 $V$，广义力为压力 $p$
