--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
@@ -45,11 +45,11 @@ $$
 
 设圆形腔体积：$\displaystyle V=\frac{4\pi k^3}{3}$，则模式数为：
 $$
-Nv=\frac{\frac{8\pi k^3}{3}}{\left( \frac{2\pi n}{L} \right)^3}=\frac{8\pi L^3R^3}{3C^3}
+Nv=\frac{\frac{8\pi k^3}{3}}{\left( \frac{2\pi }{L} \right)^3}=\frac{8\pi L^3v^3}{3C^3}
 $$
 $\displaystyle d Nv=g_{v}dv \implies n_{v}=\frac{g_v}{e^{ \beta \xi _{i} }-1}$ 得能量密度为：
 $$
-\phi_{v}=\frac{n_{v}\epsilon_{v}}{V}=\frac{8\pi v^2\epsilon{v}}{3c^3(e^{ \beta \epsilon_{i} }-1)}=\frac{8\pi h v^3}{c^3(e^{ hv/k_{B}T }-1)}
+\phi_{v}=\frac{n_{v}\epsilon_{v}}{V}=\frac{8\pi v^2\epsilon_{v}}{c^3(e^{ \beta \epsilon_{i} }-1)}=\frac{8\pi h v^3}{c^3(e^{ hv/k_{B}T }-1)}
 $$
 ### 斯忒藩定律
 $$
