--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
@@ -41,7 +41,7 @@ $$
 广义坐标 $\displaystyle y_{i}$，势能 $\displaystyle U\left( x \right)=\frac{kx^2}{2}$，得能量 $\displaystyle \epsilon_{i}\left( y_{1},y_{2},\cdots \right)$
 广义力：
 $$
-Y=-\sum \frac{ \partial \epsilon }{ \partial y }n_{i}= -\sum \frac{ \partial \epsilon }{ \partial y }g_{i}e^{ -\alpha-\beta \epsilon _{i} }=\frac{N}{\beta}\frac{ \partial \ln Z }{ \partial y } 
+Y=-\sum \frac{ \partial \epsilon }{ \partial y }n_{i}= -\sum \frac{ \partial \epsilon }{ \partial y }g_{i}e^{-\beta \epsilon _{i} }=\frac{N}{\beta}\frac{ \partial \ln Z }{ \partial y } 
 $$
 常用：压强的状态方程
 $$
@@ -165,7 +165,7 @@ $$
 Z^{振}=\frac{e^{ -\beta \hbar \omega\frac{1}{2}}}{1-e^{ -\beta \hbar \omega}}
 $$
 $$
-U^{振}=-N\frac{ \partial Z^{振} }{ \partial \beta }=\frac{N\hbar\omega}{2}+\frac{N\hbar\omega}{-1+e^{\beta \hbar \omega}} 
+U^{振}=-N\frac{ \partial \ln Z^{振} }{ \partial \beta }=\frac{N\hbar\omega}{2}+\frac{N\hbar\omega}{-1+e^{\beta \hbar \omega}} 
 $$
 $$
 C^{振}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=Nk_{B}\left( \frac{\hbar\omega}{k_{B}T} \right)^2 \frac{e^{ \frac{\hbar\omega}{k_{B}T}}}{(-1+e^{\frac{\hbar\omega}{k_{B}T}})^2}
