--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
@@ -4,7 +4,7 @@
 
 系统的哈密顿量 $$\displaystyle H=\sum \left[ \frac{m}{2}v_{i}^2 +V(x_{i})\right]=\sum \left[  \frac{p_{i}^2}{2m} +V(x_{i})\right]$$
 如 $$H=\sum \frac{p_{i}^2}{2m}+\frac{1}{2}(x_{i+1}-x_{i})^2+\frac{1}{3}(x_{i+1}-x_{i})^3$$
-微观状态 $\displaystyle A$ 构成 $\displaystyle \Gamma$ 空间矢量： $\displaystyle \left(p_{0},p_{1},p_{2},\cdots p_{n};x_{0},x_{1},x_{2},\cdots,x_{n}\right)=\sum A_{i}(x_{i},p_{i})$ 
+微观状态 $\displaystyle A$ 构成 $\displaystyle \Gamma$ 空间矢量： $\displaystyle A\left(p_{0},p_{1},p_{2},\cdots p_{n};x_{0},x_{1},x_{2},\cdots,x_{n}\right)=\sum A_{i}(x_{i},p_{i})$ 
 
 [[系综理论#两个相空间]]
 ### 近独立系统
@@ -36,7 +36,7 @@ $\displaystyle n$ 个粒子进入 $\displaystyle \omega _{i}$ 的概率为 $\dis
 注意 $\displaystyle \sum \omega(n_{1},n_{2},\cdots)=1$，考虑定域系统和经典极限条件
  
  ## 玻尔兹曼分布
- 使 $\displaystyle \delta \ln \omega$ 最大的分布是[[平衡态分布]]，即最概然状态，由粒子数守恒和能量守恒可得：
+ 使 $\displaystyle  \ln \omega$ 最大的分布是[[平衡态分布]]，即最概然状态，由粒子数守恒和能量守恒可得：
  $$\displaystyle \begin{align}
 \sum n_{i}=N \implies \sum \delta n_{i}=0 \\ \\
 \\
