--- a/知识碎片/快捷设置.md
+++ b/知识碎片/快捷设置.md
@@ -1,3 +1,10 @@
+[    
+    // Math mode
+    {trigger: "mk", replacement: "$\\displaystyle $0$", options: "tA"},
+    {trigger: "，。", replacement: "$\\displaystyle $0$", options: "tA"},
+    {trigger: "dm", replacement: "$$\n$0\n$$", options: "tAw"},
+    {trigger: "。/", replacement: "$$\n$0\n$$", options: "tAw"},
+    {trigger: "beg", replacement: "\\begin{$0}\n$1\n\\end{$0}", options: "mA"},
 
 
     // Dashes
@@ -73,6 +80,7 @@
     {trigger: "trace", replacement: "\\mathrm{Tr}", options: "mA"},
     {trigger: "det", replacement: "\\det", options: "mA"},
     {trigger: "re", replacement: "\\mathrm{Re}", options: "mA"},
+    {trigger: "p=", replacement: "\\approx", options: "mA"},
     {trigger: "im", replacement: "\\mathrm{Im}", options: "mA"},
 
     {trigger: "([a-zA-Z]),\\.", replacement: "\\mathbf{[[0]]}", options: "rmA"},
@@ -121,7 +129,7 @@
     {trigger: "([^\\\\])mp", replacement: "[[0]]\\mp", options: "rm"},
     {trigger: "+-", replacement: "\\pm", options: "mA"},
     {trigger: "-+", replacement: "\\mp", options: "mA"},
-    {trigger: "...", replacement: "\\dots", options: "mA"},
+    {trigger: "...", replacement: "\\cdots", options: "mA"},
     {trigger: "<->", replacement: "\\leftrightarrow ", options: "mA"},
     {trigger: "->", replacement: "\\to", options: "mA"},
     {trigger: "!>", replacement: "\\mapsto", options: "mA"},
@@ -148,7 +156,7 @@
     {trigger: "\\sim ~", replacement: "\\approx", options: "mA"},
     {trigger: "prop", replacement: "\\propto", options: "mA"},
     {trigger: "nabl", replacement: "\\nabla", options: "mA"},
-    {trigger: "del", replacement: "\\nabla", options: "mA"},
+    {trigger: "Del", replacement: "\\nabla", options: "mA"},
     {trigger: "xx", replacement: "\\times", options: "mA"},
     {trigger: "**", replacement: "\\cdot", options: "mA"},
     {trigger: "para", replacement: "\\parallel", options: "mA"},
