--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/声子气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/声子气体.md
@@ -1,9 +1,9 @@
 ## 爱因斯坦理论
-量子化的思想来描述振子间的能量 $\displaystyle E_k=(\frac{1}{2}+n)\hbar\omega_k$
-我们认为 $n$ 个量子反应了 $n$ 个声子（声子为准粒子且是局域化的）通过上述方法，我们将固体视为**声子气体**来计算固体的热容，
+固体中原子热运动视为 $\displaystyle 3N$ 个同频率同频率振子的振动，利用量子化的思想来描述振子间的能级 $\displaystyle \varepsilon_k=(\frac{1}{2}+n)\hbar\omega_k$
 
-声子是玻色子，满足玻色分布，**声子数等于简正模数等于粒子数。**
-在该能级上存在 $\displaystyle n$ 个声子，又称[[准粒子概念]]，/元激发
+我们认为 $n$ 个量子反映了 $n$ 个声子（声子为准粒子且是局域化的，[[准粒子]] 又称元激发。）通过上述方法，我们将固体视为**声子气体**来计算固体的热容，声子是玻色子，满足玻色分布，**声子数等于简正模数等于粒子数。**
+
+每一个粒子以 $\displaystyle \omega$ 振动存在 $\displaystyle n$ 个 $\displaystyle \hbar\omega$ 声子，
 声子数不守恒。将晶格视为受限在一定范围内相互独立的声子，声子气体是波色子满足玻色分布，简并度 $\displaystyle g_{i}=1$，
 
 $$
@@ -18,11 +18,11 @@ $$
 \begin{aligned}C_v=3Nk_B(\frac{\hbar\omega}{k_BT})^2\frac{e^{\frac{\hbar\omega}{k_BT}}}{(e^{\frac{\hbar\omega}{k_BT}}-1)^2}\end{aligned}
 $$
 ## 德拜理论
-一个声子对应一个频率的简正模，因此我们可以得到系统的简并度为 $1$ 。 $\displaystyle \hbar \omega_{k}$  的声子数
+一个声子对应一个频率的简正模，因此我们可以得到系统的简并度为 $1$ ，频率频率为 $\displaystyle  \omega_{k}$  的声子数：
 $$
 n_{\omega}=\frac{1}{e^{ \beta \hbar \omega_{k} }-1}
 $$
-总能量（系统的零点振动能 $U_{0}$）
+总能量（系统的零点振动能 $U_{0}$，可忽略）
 $$
 U=\sum n_{k}\varepsilon_{k} =\sum_{i=1}^{N}\frac{\hbar \omega_{k}}{e^{ \beta \hbar \omega_{k} }-1}+U_{0}
 $$
@@ -49,54 +49,63 @@ C_{v}=k_{B}\sum \left( \frac{\hbar\omega_{k}}{k_{b}T} \right)^2 e^{- \beta \hbar
 $$
 假设在 $\displaystyle d\omega$ 内有模式数 $\displaystyle g(\omega)$, 所以系统的模式数可以表示为 $g(\omega)d\omega$
 
-先通过 $\displaystyle g(k)$ 求模式数，色散关系 $\displaystyle kc_{s}=\omega$
+先通过 $\displaystyle g(k)$ 求模式数，由色散关系 $\displaystyle kC_{s}=\omega$，$\displaystyle k$ 空间内单个模式占据 $\displaystyle \frac{2\pi}{L}$
 
-$\displaystyle T\to 0,C_{v}\to T$
 $\displaystyle k$ 空间内模式数
 $$
-dH_{k}= \frac{dk}{\frac{2\pi}{L}}=\frac{Ld\omega}{2\pi C_{s}}=g(\omega),\quad kCs=\omega \implies g(\omega)=\frac{L}{2\pi C_{S}}
+g(k)dk=\frac{dk}{\frac{2\pi}{L}}=\frac{Ld\omega}{2\pi C_{s}}\implies\quad kCs=\omega \implies g(\omega)=\frac{L}{2\pi C_{S}}
 $$
-引入 $\displaystyle x=\frac{\hbar\omega}{k_{B}T}$ 将求和化为连续积分：
+引入 $\displaystyle x=\frac{\hbar\omega}{k_{B}T},\quad x_{D}= \frac{\hbar\omega_{k,max}}{k_{B}T}$ 将求和化为连续积分：
 $$
 C_{v}=\frac{k_{B}L}{2\pi} \frac{k_{B}T}{\hbar}\int_{0}^{x_{D}} x^2 e^{ -x } \, dx 
 $$
 $\displaystyle T\to{0},x_{D}\to \infty$ 
+$$
+C_{v}=\frac{k_{B}L}{2\pi} \frac{k_{B}T}{\hbar}\int_{0}^{\infty} x^2 e^{ -x } \, dx =\frac{k_{B}^2LT}{2\pi \hbar }
+$$
+一维情况下 $\displaystyle C_V\propto T$
+
 ## 三维固体——德拜模型
 
-将二维晶格 $\displaystyle L*L$ 写出其哈密顿量，其振荡模式与一维的纵波模式不同。
+### 态函数
+本节中热容只考虑最近邻的相互作用。将二维晶格 $\displaystyle L*L$ 写出其哈密顿量，其振荡模式与一维的纵波模式不同。
 在 $\displaystyle N$ 个粒子中具有 $\displaystyle N$ 个纵向模式， $\displaystyle 2N$ 个横向模式
 $$
 U=\sum_{k=1}^{N} \frac{\hbar\omega_{k}^{\parallel }}{e^{ \beta \hbar\omega_{k}^{\parallel } }-1}+2\sum_{k=1}^{N} \frac{\hbar\omega_{k}^{\perp }}{e^{ \beta \hbar\omega_{k}^{\perp } }-1}
 $$
-态空间模式数
+态空间模式数利用 $\displaystyle kC_{s}=\omega$ 
 $$
 N_{k}=\frac{\frac{4}{3}\pi k^3}{\left( \frac{2\pi}{L} \right)^3}=\frac{\frac{4}{3}\pi \omega^3}{\left( {2\pi} \right)^3C_{S}^{\parallel}}=N_{\omega}
-$$ $$
-dN_{\omega}=\frac{\frac{4}{3}\pi v\omega^3}{\left( {2\pi} \right)^3C_{S}^{\parallel}}d\omega=g(\omega)d\omega
+$$ 
 $$
+dN_{\omega}=\frac{\frac{4}{3}\pi V\omega^3}{\left( {2\pi} \right)^3C_{S}^{\parallel}}d\omega=g(\omega)d\omega
 $$
-U=\int _{0}^{\omega_{D}}\left( \frac{ v\omega^2}{ {2\pi}^2C_{S}^{\parallel}}+\frac{ 2v\omega^2}{ {2\pi}^2C_{S}^{\perp}} \right)  \, \frac{\hbar\omega}{e^{ \beta \hbar\omega }-1}d\omega =B\int _{0}^{\omega_{D}}  \, \frac{\hbar\omega^3}{e^{ \beta \hbar\omega }-1}d\omega
+### 内能
+考虑各向同性后，内能为
+$$
+U=\int _{0}^{\omega_{D}}\left( \frac{ V\omega^2}{ {2\pi}^2C_{S}^{\parallel}}+\frac{ 2V\omega^2}{ {2\pi}^2C_{S}^{\perp}} \right)  \, \frac{\hbar\omega}{e^{ \beta \hbar\omega }-1}d\omega =B\int _{0}^{\omega_{D}}  \, \frac{\hbar\omega^3}{e^{ \beta \hbar\omega }-1}d\omega
 $$
 $\displaystyle y=\frac{\hbar\omega}{k_{B}T},x=\frac{\hbar\omega_{D}}{k_{B}T}=\frac{\theta_{D}}{T}$ 其中 $\displaystyle \theta_{D}$ 即为德拜温度
 $$
-U=3Nk_{B}TB \frac{_{3}}{x^3}\int _{0}^{x_{D}} \frac{y^3dy}{e^{ y }-1} \, dx 
+U=3Nk_{B}TB \frac{_{3}}{x_{D}^3}\int _{0}^{x_{D}} \frac{y^3dy}{e^{ y }-1} \, dx 
 $$
 $$
 \int _{0}^{\omega_{D}} B\omega^2d\omega=3N
 $$
-高温极限
+### 高温极限
 $$
 U=3Nk_{B}T,~C_{v}=3Nk_{B}
 $$
-低温极限 $\displaystyle x\gg 1$ 则
+### 低温极限
+$\displaystyle y=\frac{\hbar\omega}{k_{B}T}\gg 1$ 则
 $$
-\frac{_{3}}{x^3}\int _{0}^{\infty} \frac{y^3dy}{e^{ y }-1}=\frac{\pi^4}{5x^3}
+\frac{_{3}}{x_{D}^3}\int _{0}^{\infty} \frac{y^3dy}{e^{ y }-1}=\frac{\pi^4}{5x_{D}^3}
 $$
 $$
 U=3Nk_{B}\frac{\pi^4}{5}B \frac{T^4}{\theta_{D}^3}
 $$
 $$
-C_{v}=3Nk_{B}\frac{T^4}{\theta_{D}^3}
+C_{v}=\frac{12Nk_{B}B\pi^4}{5\theta_{D}^3}T^3
 $$
-## 三维爱因斯坦模型
-假设每个粒子以 $\displaystyle \omega$ 频率振动，
+注意，$\displaystyle U\propto T^4,C_V\propto T^3$
+
