--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/声子气体下的固体热容.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/声子气体下的固体热容.md
@@ -57,35 +57,31 @@ $$
 
 称为格波，由周期性边界条件
 
-
-
-
-
 色散关系，$\displaystyle \omega_{k}=a\sqrt{ \frac{k}{m} }k=C_{s}k$ 
 $$
 U=Nk_{B}T ~~ C_{v}=\frac{ \partial U }{ \partial T }=Nk_{B} 
 $$
 低温情况下不成立，$\displaystyle E_{k}=\left( \frac{1}{2}+n \right)\hbar \omega_{k}$
-在该能级上存在 $\displaystyle n$ 个声子，又称[[准粒子概念]]，/元激发
+在该能级上存在 $\displaystyle n$ 个声子，又称[[准粒子]]，/元激发
 声子数不守恒。将晶格视为受限在一定范围内相互独立的声子，声子气体是波色子满足玻色分布，简并度 $\displaystyle g_{i}=1$，
 $\displaystyle \hbar \omega_{k}$  的声子数
 $$
 n_{\omega}=\frac{1}{e^{ \beta \hbar \omega_{k} }-1}
 $$
-总能量
+### 总能量
 $$
 U=\sum n_{k}\varepsilon_{k} =\sum_{i=1}^{N}\frac{\hbar \omega_{k}}{e^{ \beta \hbar \omega_{k} }-1}+U_{0}
 $$
 
-热容
+### 热容
 $$
 C_{v}=\frac{ \partial U }{ \partial T } =\frac{1}{k_{B}T^2}\sum_{i=1}^{N}\left( \frac{\hbar \omega_{k}}{e^{ \beta \hbar \omega_{k} }-1}\right)^2 e^{ \beta \hbar \omega_{k}}
 $$
-高温极限
+### 高温极限
 $$
 U=Nk_{B}T\implies C_{v}=Nk_{B}
 $$
-低温极限
+### 低温极限
 $$
 C_{v}=k_{b}\sum \left( \frac{\hbar\omega_{k}}{k_{b}T} \right)^2 e^{- \beta \hbar \omega_{k}}
 $$
@@ -106,7 +102,7 @@ $\displaystyle T\to{0},x_{D}\to \infty$
 $$
 U=\sum_{k=1}^{N} \frac{\hbar\omega_{k}^{\parallel }}{e^{ \beta \hbar\omega_{k}^{\parallel } }-1}+2\sum_{k=1}^{N} \frac{\hbar\omega_{k}^{\perp }}{e^{ \beta \hbar\omega_{k}^{\perp } }-1}
 $$
-态空间模式数
+### 态空间模式数
 $$
 N_{k}=\frac{\frac{4}{3}\pi k^3}{\left( \frac{2\pi}{L} \right)^3}=\frac{\frac{4}{3}\pi \omega^3}{\left( {2\pi} \right)^3C_{S}^{\parallel}}=N_{\omega}
 $$ $$
@@ -122,11 +118,12 @@ $$
 $$
 \int _{0}^{\omega_{D}} B\omega^2d\omega=3N
 $$
-高温极限
+### 高温极限
 $$
 U=3Nk_{B}T,~C_{v}=3Nk_{B}
 $$
-低温极限 $\displaystyle x\gg 1$ 则
+### 低温极限
+$\displaystyle x\gg 1$ 则
 $$
 \frac{_{3}}{x^3}\int _{0}^{\infty} \frac{y^3dy}{e^{ y }-1}=\frac{\pi^4}{5x^3}
 $$
