--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
@@ -8,21 +8,31 @@ $$
 $$
 \delta \ln \Omega=\frac{\delta E+\delta A}{e^{ -\phi }\Omega}
 $$
-广义力和广义功 $$
-\delta A=\sum X_{\lambda} \delta 
-$$ 熵
+### 广义力和广义功 
+$$
+\delta A=\sum X_{\lambda} \zeta_{\lambda}  
+$$ ### 熵
 $$
 e^{-\phi}\Omega=k_{B}T
 $$
 $$
 S=k_{B}\ln \Omega
 $$
+热力学第一定律：
+$$
+T\delta S=\delta E+\delta A
+$$
+
 $$
 \delta\ln\Omega=\frac{\delta\Omega}{\Omega}=\frac{\delta E+\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}}{e^{-\phi}\Omega}
 $$
 
 
-热力学系综含 $\displaystyle PVT$ 三个变量，$\displaystyle \delta A=-PdV\quad E=U$
+在一般的热力学系综中有三个变量：$\displaystyle P.V.T$
+定义 $\displaystyle dA=-PdV\quad E=U$ ，得到原始的热力学第一定律
+$$
+TdS=dU-PdV
+$$
 ### 热力学第一定律
 一般过程做功和传热都和过程有关（路径相关）
 $$
@@ -31,8 +41,79 @@ $$ $$
 ds=du+dA\implies Q= \triangle U+A
 $$
 $$
-dQ=TdS
+đQ=TdS=dU+đA
 $$
-微观状态变化导致能量改变，这种时间上的变化产生热，该作用量仅体现在变化过程之中。
+微观状态变化导致能量改变，这种时间上的变化产生热，该作用量仅体现在变化过程之中。$\displaystyle đ$ 表示过程量，无前后之差
 
 热不是功，
+## 正则系综
+### 分布
+$$\displaystyle \rho=e^{\lambda-1-\beta E}=e^{ \beta(\phi-E) }$$
+
+### 热力学第一定律
+从[[由系综到热力学#正则分布与热力学]]得
+$$
+-\theta\delta\langle\ln\rho\rangle=\delta\langle E\rangle+\delta\langle A\rangle 
+$$
+定义 $\displaystyle -k_{B}\delta\langle\ln\rho\rangle=S~,~k_{B}T=\theta$
+$$
+T\delta S=\delta \left< E \right>+\delta A 
+$$
+定义$\left< E \right> =U \quad \delta A=-PdV$则得到热力学第一定律的原始形式
+$$
+T\delta S=\delta U-pdV
+$$
+一般化 
+$$\displaystyle TdS=đQ \implies đQ=dU+đA$$
+### 热力学第二定律
+$$
+S=-k_{B}\int \rho \ln \rho \, d \Omega 
+$$
+$\displaystyle S$ （吉布斯熵）最大，即热力学第二定律
+
+### 亥姆霍兹自由能
+$$
+\phi=F+C \implies \delta F=-SdT-\delta A
+$$
+$$
+\phi=-k_{B}T\ln \int e^{ -E/kT } \, d\Omega 
+$$
+## 巨正则
+$\displaystyle \left< E \right> =C~\left< N \right> =C$
+$$
+\rho=e^{ \alpha+\sum v_{k}N_{k}-\beta E }
+$$
+其中 $\displaystyle v_{k}=\frac{\mu _{i}}{k_{B}T}$
+### 热力学第一定律
+$$
+TdS=\delta U+\delta A-\sum \mu _{i}dn_{i}
+$$
+更一般的表达式：
+$$
+dU=đQ-pdV+\mu dN
+$$
+内能变化等于热的变化，体积变化做功、粒子增减做功。
+
+## 补充说明
+### 成立条件
+$\displaystyle N\to \infty \quad V\to \infty \quad \frac{N}{V}$ 有限 
+$\displaystyle \left< E \right> \implies N$ 有限
+
+内能、熵、热、功、热容、焓
+
+哈密顿量
+$$
+H=\sum \frac{p_{i}^2}{2m}+V\left( q_{1},q_{2}\cdots q_{n} \right) 
+$$
+理想气体
+$$
+H=\sum \frac{p_{i}^2}{2m}
+$$
+谐振子，有相互作用
+$$
+H=\sum \frac{p_{i}^2}{2m}+\frac{k}{2}\left( q_{i+1}-q_{i} \right)^2
+$$
+伊辛模型
+$$
+H=-\sum J_{ij}S_{i}S_{j}-\sum \mu S_{i}
+$$
