--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
@@ -97,23 +97,37 @@ $$
 ## 补充说明
 ### 成立条件
 $\displaystyle N\to \infty \quad V\to \infty \quad \frac{N}{V}$ 有限 
-$\displaystyle \left< E \right> \implies N$ 有限
+$\displaystyle \left< E \right> \implies N$ 有限则不为常量，$\displaystyle N$ 趋于无穷时严格过渡到热力学。
 
+### 热力学量
 内能、熵、热、功、热容、焓
 
-哈密顿量
+#### 哈密顿量
 $$
 H=\sum \frac{p_{i}^2}{2m}+V\left( q_{1},q_{2}\cdots q_{n} \right) 
 $$
-理想气体
+#### 理想气体
 $$
 H=\sum \frac{p_{i}^2}{2m}
 $$
-谐振子，有相互作用
+#### 谐振子
+有相互作用
 $$
 H=\sum \frac{p_{i}^2}{2m}+\frac{k}{2}\left( q_{i+1}-q_{i} \right)^2
 $$
-伊辛模型
+#### 伊辛模型
 $$
 H=-\sum J_{ij}S_{i}S_{j}-\sum \mu S_{i}
 $$
+由相互作用和外场作用共同构成。
+#### 熵
+$\displaystyle S=k_{B}\ln \Omega$
+$$
+S=-k_{B}\int \rho \ln \rho \, d\Omega 
+$$
+#### 热
+$$
+đQ=TdS
+$$
+与过程有关，热是状态量。而 $\displaystyle dS=\frac{đQ}{T}$ 与过程无关，是状态量。
+#### 
