--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
@@ -130,4 +130,6 @@ $$
 đQ=TdS
 $$
 与过程有关，热是状态量。而 $\displaystyle dS=\frac{đQ}{T}$ 与过程无关，是状态量。
-#### 
+#### 功
+$đA=-PdV\implies$ 过程量 
+$đV=-\frac{đA}{P}\implies$ 状态量 
