--- a/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
@@ -1,4 +1,5 @@
 
+[github]( https://github.com/HUSKYzjh/OLIVERIRA/tree/main/%E7%89%A9%E7%90%86%E5%AD%A6/%E6%9C%AC%E7%A7%91%E8%AF%BE%E7%A8%8B/%E7%83%AD%E5%8A%9B%E5%AD%A6%E4%B8%8E%E7%BB%9F%E8%AE%A1%E7%89%A9%E7%90%86 )
 
 -----
 ## 统计物理基础
