--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
@@ -11,7 +11,8 @@ $$
 ### 广义力和广义功 
 $$
 \delta A=\sum X_{\lambda} \zeta_{\lambda}  
-$$ ### 熵
+$$
+### 熵
 $$
 e^{-\phi}\Omega=k_{B}T
 $$
@@ -104,18 +105,18 @@ $\displaystyle \left< E \right> \implies N$ 有限则不为常量，$\displaysty
 
 #### 哈密顿量
 $$
-H=\sum \frac{p_{i}^2}{2m}+V\left( q_{1},q_{2}\cdots q_{n} \right) 
+H=\sum \frac{P_{i}^2}{2m}+V\left( q_{1},q_{2}\cdots q_{n} \right) 
 $$
-#### 理想气体
+##### 理想气体
 $$
 H=\sum \frac{p_{i}^2}{2m}
 $$
-#### 谐振子
+##### 谐振子
 有相互作用
 $$
 H=\sum \frac{p_{i}^2}{2m}+\frac{k}{2}\left( q_{i+1}-q_{i} \right)^2
 $$
-#### 伊辛模型
+##### 伊辛模型
 $$
 H=-\sum J_{ij}S_{i}S_{j}-\sum \mu S_{i}
 $$
@@ -131,5 +132,78 @@ $$
 $$
 与过程有关，热是状态量。而 $\displaystyle dS=\frac{đQ}{T}$ 与过程无关，是状态量。
 #### 功
-$đA=-PdV\implies$ 过程量 
-$đV=-\frac{đA}{P}\implies$ 状态量 
+
+$đA=-pdV\implies$ 过程量 
+$dV=-\frac{đA}{p}\implies$ 状态量 
+#### 热容
+$$
+C=\lim_{ \triangle T \to 0 } \frac{\triangle Q}{\triangle T} \quad \left(  \triangle Q=\triangle U+p\triangle V\right) 
+$$
+
+$$
+C_{V}=\left( \frac{ \partial U }{ \partial T }  \right) _{V}
+$$
+##### 等压热容
+$$
+C_{p}=\left( \frac{ \partial (U+pV) }{ \partial T }  \right) _{p}=\left( \frac{ \partial U }{ \partial T }  \right)_{p}+p\left( \frac{ \partial V }{ \partial T }  \right)_{p}
+$$
+焓 
+$$
+H=U+pV
+$$
+##### Mayer 方程
+$$
+C_{p}=\left( \frac{ \partial H }{ \partial T }  \right)_{p}=C_{V}+\left[ p+\left( \frac{ \partial U }{ \partial V }  \right)_{V}  \right]\left( \frac{ \partial V }{ \partial T }  \right)_{p}  
+$$
+$$
+v=\frac{C_{p}}{C_{V}}
+$$
+### 广延量和强度量
+$$
+u=\sum_{i=0}^{n}u_{i}
+$$
+广延量：满足叠加原理。哈密顿量会相互影响，边界处相互作用微弱时可以忽略不计，满足广延量的要求。
+
+强度量：不满足叠加原理，如电极化强度、压强、磁化强度等
+
+## 可逆过程
+### 准静态
+满足约束方程 $\displaystyle f(PVT)=0$，对应于实验上无穷慢的变化。状态上的变化对系统性质没有改变，为一理想下的概念。
+
+$$
+A=\int_{V_{1}}^{V_{2}}pdV 
+$$
+### 可逆过程和不可逆过程
+
+**动力学可逆**，$\displaystyle t\to-t,~P\to-P$
+
+**热力学可逆**，不引起任何宏观上的影响的变化，或称始终满足 $\displaystyle f(pVT)=0$ 的状态变化。
+
+## 实验推导
+### 盖吕萨克焦耳实验
+盖吕萨克焦耳实验是一种用来测量气体内能与体积变化关系的实验方法，由法国物理学家盖·吕萨克于1807年首先进行，后来由英国物理学家詹姆斯·焦耳于1845年改进和完善。实验的基本原理是利用气体自由膨胀时的温度变化，根据焦耳定律，气体的内能只与温度有关，与体积无关。实验的具体步骤如下：
+
+- 准备一个绝热容器，将其分为两个等体积的部分，中间用一个活塞隔开。
+- 在容器的一侧充满气体，另一侧抽成真空，测量气体的压力和温度。
+- 打开活塞，使气体向真空膨胀，观察气体的温度变化。
+- 根据气体的状态方程和焦耳定律，计算气体的内能变化。
+$$
+\left< \frac{P^2}{2m} \right> = \frac{3k_{B}T}{2} 
+$$
+### 焦耳-汤姆生实验
+焦耳-汤姆生效应是气体通过多孔性物质(如棉絮、石棉等)而发生不可逆绝热膨胀后温度发生变化的现象。在通常温度下，许多气体膨胀后都变冷，但氢和氦则变热。事实上每种气体相应于一定压强都有一个确定的温度，称为转换温度，在这温度以下时，膨胀后变冷，在这温度以上时膨胀后变热。一般称变冷的情况为“正效应”，变热为“负效应”。
+#### 热力学
+$$
+A_{1}=\int_{V_{1}}^{0}p_{1}  \, dV=p_{1}V_{1} 
+$$ $$
+A_{2}=\int_{0}^{V_{2}}p_{2}  \, dV=p_{2}V_{2}
+$$
+$$
+A=p_{2}V_{2}-p_{1}V_{1}=U_{1}-U_{2}
+$$
+
+过程前后有不变量
+$$
+H=p_{1}V_{1}+U_{1}=p_{2}V_{2}+U_{2}
+$$
+
